--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <img src="{{ "/assets/img/logo.png" | absolute_url }}" class="dib w3 h3" alt="Site Name">
   </a>
   <div class="dtc v-mid w-75 tr">
-    <a class="link dim dark-gray f6 f5-ns dib mr3 mr4-ns {% if page.url == '/about.html' %}active{% endif %}"  href="{{site.baseurl}}/about" title="About">About</a>
+    <a class="link dim dark-gray f6 f5-ns dib mr3 mr4-ns {% if page.url == '/about.html' %}active{% endif %}"  href="{{site.baseurl}}about" title="About">About</a>
     <a class="link dim dark-gray f6 f5-ns dib mr3 mr4-ns {% if page.url == '/pricing.html' %}active{% endif %}" href="/pricing" title="Store">Pricing</a>
     <a class="link dim dark-gray f6 f5-ns dib {% if page.url == '/signup.html' %}active{% endif %}" href="/signup" title="Sign Up">Sign Up</a>
   </div>
