--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <a class="link dim dark-gray f6 f5-ns dib {% if page.url == '/signup.html' %}active{% endif %}" href="/signup" title="Sign Up">Sign Up</a>
   </div>
 </nav>
-
+{{site.baseurl}}
 <!--
     <div class="fl w-60 tc">
       <H1 class="black-70"><a href="index" /><img src="{{ "/assets/img/logo.png" | absolute_url }}" width="140" /></a></H1>
