--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,11 @@
   </a>
   <div class="dtc v-mid w-75 tr">
     <a class="link dim dark-gray f6 f5-ns dib mr3 mr4-ns {% if page.url == '/about.html' %}active{% endif %}"  href="{{site.baseurl}}about" title="About">About</a>
-    <a class="link dim dark-gray f6 f5-ns dib mr3 mr4-ns {% if page.url == '/pricing.html' %}active{% endif %}" href="/pricing" title="Store">Pricing</a>
-    <a class="link dim dark-gray f6 f5-ns dib {% if page.url == '/signup.html' %}active{% endif %}" href="/signup" title="Sign Up">Sign Up</a>
+    <a class="link dim dark-gray f6 f5-ns dib mr3 mr4-ns {% if page.url == '/pricing.html' %}active{% endif %}" href="{{site.baseurl}}pricing" title="Store">Pricing</a>
+    <a class="link dim dark-gray f6 f5-ns dib {% if page.url == '/signup.html' %}active{% endif %}" href="{{site.baseurl}}signup" title="Sign Up">Sign Up</a>
   </div>
 </nav>
-{{site.baseurl}}
+
 <!--
     <div class="fl w-60 tc">
       <H1 class="black-70"><a href="index" /><img src="{{ "/assets/img/logo.png" | absolute_url }}" width="140" /></a></H1>
