--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,7 @@
 <div class="w-90 w-50-ns center tr">
 {% if page.linktext == null %} {% else %}
 	   <a class="f6 link dim ph3 pv2 mb2 dib white bg-dark-blue right" href="{{site.baseurl}}{{page.link}}">{{page.linktext}} ></a>
+    {{site.baseurl}}{{page.link}}
 {% endif %}     
 
 
