--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <head>
 <title>{{ page.title }} | Dimple</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="7-J2UFf5P1MbE75BkoFuxjALc0TU9G21mRjWJ_yGZts" />
 <link rel="stylesheet" href="{{ "/assets/main.scss" | relative_url }}"/>
 <style>
 .active{font-weight:bold;}
