more small updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
 <body class="w-100 sans-serif">
 <nav class="dt w-90-m w-60-l w-100-ns center border-box pa3 ph5-ns">
-  <a class="dtc v-mid mid-gray link dim w-25" href="index" title="Home">
+  <a class="dtc v-mid mid-gray link dim w-25" href="http://getdimple.com" title="Home">
   <img src="{{ "http://getdimple.com/assets/img/logo.png" | absolute_url }}" class="dib w3 h3" alt="Site Name">
   </a>
   <div class="dtc v-mid w-75 tr">
@@ -63,7 +63,7 @@
   <section class="cf mb2">
     <div class="mb0 mb0-ns w-100 w-100-l">
    <p class="mb0 pb0 black-70"> <b>416-879-3358</b></p>
-      <a class="black-70 f6 f5-ns fw6 tl link dim dib pv1 mt0 mb0 mb0-l" href="mailto:hello@impossible.com" >
+      <a class="black-70 f6 f5-ns fw6 tl link dim dib pv1 mt0 mb0 mb0-l" href="mailto:hello@getdimple.com" >
         hello@getdimple.com
       </a>
 <p class="f7 ma0 pa0 black-70"> © Dimple 2018</p>
