--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="{{ "/assets/main.scss" | relative_url }}"/>
 <style>
 .active{font-weight:bold;}
+a{color:#00afff;}
 </style>
 
 </head>
@@ -52,7 +53,7 @@
 
 <div class="w-90 w-50-ns center tr">
 {% if page.linktext == null %} {% else %}
-	   <a class="f6 link dim ph3 pv2 mb2 dib white bg-dark-blue right" href="{{site.baseurl}}{{page.link}}">{{page.linktext}} ></a>
+	   <a class="f6 link dim ph3 pv2 mb2 dib white bg-light-blue right" href="{{site.baseurl}}{{page.link}}">{{page.linktext}} ></a>
 
 {% endif %}     
 
@@ -63,7 +64,7 @@
   <section class="cf mb2">
     <div class="mb0 mb0-ns w-100 w-100-l">
    <p class="mb0 pb0 black-70"> <b>416-879-3358</b></p>
-      <a class="black-70 f6 f5-ns fw6 tl link dim dib pv1 mt0 mb0 mb0-l" href="mailto:hello@getdimple.com" >
+      <a class="black-70 f6 f5-ns fw6 tl link dim dib pv1 mt0 mb0 mb0-l light-blue" href="mailto:hello@getdimple.com" >
         hello@getdimple.com
       </a>
 <p class="f7 ma0 pa0 black-70"> © Dimple 2018</p>
