--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 .active{font-weight:bold;}
 a{color:#00afff;}
 </style>
+<script src="https://wchat.freshchat.com/js/widget.js"></script>
 
 </head>
 
@@ -156,7 +157,12 @@ a{color:#00afff;}
   gtag('config', 'UA-116656487-1');
 </script>
 
-
+<script>
+  window.fcWidget.init({
+    token: "39c0eab7-046f-4375-8633-7b861bc1781c",
+    host: "https://wchat.freshchat.com"
+  });
+</script>
 
 </body>
 
