remove email address

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,10 +64,10 @@ a{color:#00afff;}
  
   <section class="cf mb2">
     <div class="mb0 mb0-ns w-100 w-100-l">
-   <p class="mb0 pb0 black-70"> <b>416-879-3358</b></p>
-      <a class="black-70 f6 f5-ns fw6 tl link dim dib pv1 mt0 mb0 mb0-l blue" href="mailto:hello@getdimple.com" >
+   <a class="blue"><p class="mb0 pb0 black-70"> <b>416-879-3358</b></p></a>
+     <!-- <a class="black-70 f6 f5-ns fw6 tl link dim dib pv1 mt0 mb0 mb0-l blue" href="mailto:hello@getdimple.com" >
         hello@getdimple.com
-      </a>
+      </a> -->
 <p class="f7 ma0 pa0 black-70"> © Dimple 2018</p>
        <div class="dt dt--fixed w-100"  >
     <div class="dn dtc-ns v-mid">
