--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@ a{color:#00afff;}
  
   <section class="cf mb2">
     <div class="mb0 mb0-ns w-100 w-100-l">
-   <a class="blue"><p class="mb0 pb0 black-70"> <b>416-879-3358</b></p></a>
+  <!-- <a class="blue"><p class="mb0 pb0 black-70"> <b>416-879-3358</b></p></a>-->
      <!-- <a class="black-70 f6 f5-ns fw6 tl link dim dib pv1 mt0 mb0 mb0-l blue" href="mailto:hello@getdimple.com" >
         hello@getdimple.com
       </a> -->
