--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,10 @@ a{color:#00afff;}
 
    <div class="w-90 center w-50-ns">
  <h2 class="black-70 f3 mb0 pb0 bb bw1"> {{ page.title }}</h2>
+{% if page.permalink == 'index.html' %}<p class="f5 lh-copy mt3 pt0 black-70">
+{% else %}  
 <p class="f4 lh-copy mt3 pt0 black-70">
+  {% endif %}
 {{ page.content | markdownify | remove: '<p>' | remove: '</p>'  }}
 
 
