--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,17 +5,18 @@
   <meta name="google-site-verification" content="7-J2UFf5P1MbE75BkoFuxjALc0TU9G21mRjWJ_yGZts" />
 <link rel="stylesheet" href="{{ "/assets/main.scss" | relative_url }}"/>
 <style>
-.active{font-weight:bold;}
+.active{font-weight:bold;
+}
 a{color:#00afff;}
 </style>
-<script src="https://wchat.freshchat.com/js/widget.js"></script>
+
 
 </head>
 
 <body class="w-100 sans-serif">
 <nav class="dt w-90-m w-60-l w-100-ns center border-box pa3 ph5-ns">
   <a class="dtc v-mid mid-gray link dim w-25" href="http://getdimple.com" title="Home">
-  <img src="{{ "http://getdimple.com/assets/img/logo.png" | absolute_url }}" class="dib w3 h3" alt="Site Name">
+  <img src="{{ "http://getdimple.com/assets/img/logo.png" | absolute_url }}" class="dib br-100 w-40" alt="Site Name">
   </a>
   <div class="dtc v-mid w-75 tr">
     <a class="link dim dark-gray f6 f5-ns dib mr3 mr4-ns {% if page.url == '/about.html' %}active{% endif %}"  href="{{site.baseurl}}about" title="About">About</a>
@@ -57,7 +58,7 @@ a{color:#00afff;}
 
 <div class="w-90 w-50-ns center tr">
 {% if page.linktext == null %} {% else %}
-	   <a class="f6 link dim ph3 pv2 mb2 dib white bg-blue right" href="{{site.baseurl}}{{page.link}}">{{page.linktext}} ></a>
+	   <a class="f6 link dim ph3 pv2 mb2 dib white bg-hot-pink right" href="{{site.baseurl}}{{page.link}}">{{page.linktext}} ></a>
 
 {% endif %}     
 
